compiler/arc/src/snapshots/arc__serializer__tests__without_lume_version.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"sample\" {}"
---
ArcfileMissingLumeVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {}",
        package: PackageId(
            0,
        ),
    },
    range: 0..19,
}
